--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <!-- ====================Main Content
      ==================== -->
 
-    <div class="mainContent flex ">
+    <div class="mainContent section flex">
       <!-- ==================== Sidebar
      ==================== -->
 
@@ -67,7 +67,8 @@
         <div class="sidebarItems_2">
           <a href="#"
             ><div class="sidebarItems_2 flexAli">
-              <p style="margin-left: 0;">You</p><i class="fa-solid fa-chevron-right"></i></div
+              <p style="margin-left: 0">You</p>
+              <i class="fa-solid fa-chevron-right"></i></div
           ></a>
           <a href="#"
             ><div class="sidebarItems_2 flexAli">
@@ -112,135 +113,299 @@
             ><div class="sidebarItems_2 flexAli">
               <i class="fa-brands fa-youtube"></i>
               <p>Subscriptions</p>
-            </div></a>
-            <a href="#"
+            </div></a
+          >
+          <a href="#"
             ><div class="sidebarItems_2 flexAli">
               <div class="subsProfile">
-                <img src="./images/halo.jpg" alt="Sidebar Subscription Profile Image">
+                <img
+                  src="./images/halo.jpg"
+                  alt="Sidebar Subscription Profile Image"
+                />
               </div>
               <p>James peter</p>
-            </div></a>
-            <a href="#"
+            </div></a
+          >
+          <a href="#"
             ><div class="sidebarItems_2 flexAli">
               <div class="subsProfile">
-                <img src="./images/halo.jpg" alt="Sidebar Subscription Profile Image">
+                <img
+                  src="./images/halo.jpg"
+                  alt="Sidebar Subscription Profile Image"
+                />
               </div>
               <p>James peter</p>
-            </div></a>
-            <a href="#"
+            </div></a
+          >
+          <a href="#"
             ><div class="sidebarItems_2 flexAli">
               <div class="subsProfile">
-                <img src="./images/halo.jpg" alt="Sidebar Subscription Profile Image">
+                <img
+                  src="./images/halo.jpg"
+                  alt="Sidebar Subscription Profile Image"
+                />
               </div>
               <p>James peter</p>
-            </div></a>
-            <a href="#"
+            </div></a
+          >
+          <a href="#"
             ><div class="sidebarItems_2 flexAli">
               <div class="subsProfile">
-                <img src="./images/halo.jpg" alt="Sidebar Subscription Profile Image">
+                <img
+                  src="./images/halo.jpg"
+                  alt="Sidebar Subscription Profile Image"
+                />
               </div>
               <p>James peter</p>
-            </div></a>
-            <a href="#"
+            </div></a
+          >
+          <a href="#"
             ><div class="sidebarItems_2 flexAli">
               <div class="subsProfile">
-                <img src="./images/halo.jpg" alt="Sidebar Subscription Profile Image">
+                <img
+                  src="./images/halo.jpg"
+                  alt="Sidebar Subscription Profile Image"
+                />
               </div>
               <p>James peter</p>
-            </div></a>
-            <a href="#"
+            </div></a
+          >
+          <a href="#"
             ><div class="sidebarItems_2 flexAli">
               <div class="subsProfile">
-                <img src="./images/halo.jpg" alt="Sidebar Subscription Profile Image">
+                <img
+                  src="./images/halo.jpg"
+                  alt="Sidebar Subscription Profile Image"
+                />
               </div>
               <p>James peter</p>
-            </div></a>
-            <a href="#"
+            </div></a
+          >
+          <a href="#"
             ><div class="sidebarItems_2 flexAli">
               <div class="subsProfile">
-                <img src="./images/halo.jpg" alt="Sidebar Subscription Profile Image">
+                <img
+                  src="./images/halo.jpg"
+                  alt="Sidebar Subscription Profile Image"
+                />
               </div>
               <p>James peter</p>
-            </div></a>
-            <a href="#"
+            </div></a
+          >
+          <a href="#"
             ><div class="sidebarItems_2 flexAli">
               <div class="subsProfile">
-                <img src="./images/halo.jpg" alt="Sidebar Subscription Profile Image">
+                <img
+                  src="./images/halo.jpg"
+                  alt="Sidebar Subscription Profile Image"
+                />
               </div>
               <p>James peter</p>
-            </div></a>
-            <a href="#"
+            </div></a
+          >
+          <a href="#"
             ><div class="sidebarItems_2 flexAli">
               <div class="subsProfile">
-                <img src="./images/halo.jpg" alt="Sidebar Subscription Profile Image">
+                <img
+                  src="./images/halo.jpg"
+                  alt="Sidebar Subscription Profile Image"
+                />
               </div>
               <p>James peter</p>
-            </div></a>
-            <a href="#"
+            </div></a
+          >
+          <a href="#"
             ><div class="sidebarItems_2 flexAli">
               <div class="subsProfile">
-                <img src="./images/halo.jpg" alt="Sidebar Subscription Profile Image">
+                <img
+                  src="./images/halo.jpg"
+                  alt="Sidebar Subscription Profile Image"
+                />
               </div>
               <p>James peter</p>
-            </div></a>
-            <a href="#"
+            </div></a
+          >
+          <a href="#"
             ><div class="sidebarItems_2 flexAli">
               <div class="subsProfile">
-                <img src="./images/halo.jpg" alt="Sidebar Subscription Profile Image">
+                <img
+                  src="./images/halo.jpg"
+                  alt="Sidebar Subscription Profile Image"
+                />
               </div>
               <p>James peter</p>
-            </div></a>
-            <a href="#"
+            </div></a
+          >
+          <a href="#"
             ><div class="sidebarItems_2 flexAli">
               <div class="subsProfile">
-                <img src="./images/halo.jpg" alt="Sidebar Subscription Profile Image">
+                <img
+                  src="./images/halo.jpg"
+                  alt="Sidebar Subscription Profile Image"
+                />
               </div>
               <p>James peter</p>
-            </div></a>
+            </div></a
+          >
         </div>
       </div>
-      <div class="videoContent">
-        <div class="videoDetails">
-          <video src="./images/video.mp4"></video>
-          <div class="videoheadingChannel flexAli">
-            <div class="subsProfile">
-              <img src="./images/halo.jpg" alt="">
+      <div class="content">
+        <div class="tags flexBet">
+          <p><a href="#">All</a></p>
+          <p><a href="#">Web development</a></p>
+          <p><a href="#">Apis</a></p>
+          <p><a href="#">Military Aircraft</a></p>
+          <p><a href="#">Indian Army</a></p>
+          <p><a href="#">Music</a></p>
+          <p><a href="#">Recently uploaded</a></p>
+          <p><a href="#">Watched</a></p>
+          <p><a href="#">New to you</a></p>
+        </div>
+        <div class="videoContent">
+          <div class="videoDetails">
+            <video src="./images/video.mp4"></video>
+            <div class="videoChannelDetails flex">
+              <div class="channelProfile">
+                <img src="./images/halo.jpg" alt="" />
+              </div>
+              <div class="tinyDetails">
+                <p>4 High paying jobs in 2024</p>
+                <p class="channelName">Tanay Pratap</p>
+                <div class="views flexAli">
+                  <p><span>54K</span>views</p>
+                  <p class="postDate">10 months ago</p>
+                </div>
+              </div>
             </div>
-            <p>This is my first video on Youtube</p>
           </div>
-        </div>
-        <div class="videoDetails">
-          <video src="./images/video.mp4"></video>
-        </div>
-        <div class="videoDetails">
-          <video src="./images/video.mp4"></video>
-        </div>
-        <div class="videoDetails">
-          <video src="./images/video.mp4"></video>
-        </div>
-        <div class="videoDetails">
-          <video src="./images/video.mp4"></video>
-        </div>
-        <div class="videoDetails">
-          <video src="./images/video.mp4"></video>
-        </div>
-        <div class="videoDetails">
-          <video src="./images/video.mp4"></video>
-        </div>
-        <div class="videoDetails">
-          <video src="./images/video.mp4"></video>
-        </div>
-        <div class="videoDetails">
-          <video src="./images/video.mp4"></video>
-        </div>
-        <div class="videoDetails">
-          <video src="./images/video.mp4"></video>
-        </div>
-        <div class="videoDetails">
-          <video src="./images/video.mp4"></video>
-        </div>
-        <div class="videoDetails">
-          <video src="./images/video.mp4"></video>
+          <div class="videoDetails">
+            <video src="./images/video.mp4"></video>
+            <div class="videoChannelDetails flex">
+              <div class="channelProfile">
+                <img src="./images/halo.jpg" alt="" />
+              </div>
+              <div class="tinyDetails">
+                <p>4 High paying jobs in 2024</p>
+                <p class="channelName">Tanay Pratap</p>
+                <div class="views flexAli">
+                  <p><span>54K</span>views</p>
+                  <p class="postDate">10 months ago</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="videoDetails">
+            <video src="./images/video.mp4"></video>
+            <div class="videoChannelDetails flex">
+              <div class="channelProfile">
+                <img src="./images/halo.jpg" alt="" />
+              </div>
+              <div class="tinyDetails">
+                <p>4 High paying jobs in 2024</p>
+                <p class="channelName">Tanay Pratap</p>
+                <div class="views flexAli">
+                  <p><span>54K</span>views</p>
+                  <p class="postDate">10 months ago</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="videoDetails">
+            <video src="./images/video.mp4"></video>
+            <div class="videoChannelDetails flex">
+              <div class="channelProfile">
+                <img src="./images/halo.jpg" alt="" />
+              </div>
+              <div class="tinyDetails">
+                <p>4 High paying jobs in 2024</p>
+                <p class="channelName">Tanay Pratap</p>
+                <div class="views flexAli">
+                  <p><span>54K</span>views</p>
+                  <p class="postDate">10 months ago</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="videoDetails">
+            <video src="./images/video.mp4"></video>
+            <div class="videoChannelDetails flex">
+              <div class="channelProfile">
+                <img src="./images/halo.jpg" alt="" />
+              </div>
+              <div class="tinyDetails">
+                <p>4 High paying jobs in 2024</p>
+                <p class="channelName">Tanay Pratap</p>
+                <div class="views flexAli">
+                  <p><span>54K</span>views</p>
+                  <p class="postDate">10 months ago</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="videoDetails">
+            <video src="./images/video.mp4"></video>
+            <div class="videoChannelDetails flex">
+              <div class="channelProfile">
+                <img src="./images/halo.jpg" alt="" />
+              </div>
+              <div class="tinyDetails">
+                <p>4 High paying jobs in 2024</p>
+                <p class="channelName">Tanay Pratap</p>
+                <div class="views flexAli">
+                  <p><span>54K</span>views</p>
+                  <p class="postDate">10 months ago</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="videoDetails">
+            <video src="./images/video.mp4"></video>
+            <div class="videoChannelDetails flex">
+              <div class="channelProfile">
+                <img src="./images/halo.jpg" alt="" />
+              </div>
+              <div class="tinyDetails">
+                <p>4 High paying jobs in 2024</p>
+                <p class="channelName">Tanay Pratap</p>
+                <div class="views flexAli">
+                  <p><span>54K</span>views</p>
+                  <p class="postDate">10 months ago</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="videoDetails">
+            <video src="./images/video.mp4"></video>
+            <div class="videoChannelDetails flex">
+              <div class="channelProfile">
+                <img src="./images/halo.jpg" alt="" />
+              </div>
+              <div class="tinyDetails">
+                <p>4 High paying jobs in 2024</p>
+                <p class="channelName">Tanay Pratap</p>
+                <div class="views flexAli">
+                  <p><span>54K</span>views</p>
+                  <p class="postDate">10 months ago</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="videoDetails">
+            <video src="./images/video.mp4"></video>
+            <div class="videoChannelDetails flex">
+              <div class="channelProfile">
+                <img src="./images/halo.jpg" alt="" />
+              </div>
+              <div class="tinyDetails">
+                <p>4 High paying jobs in 2024</p>
+                <p class="channelName">Tanay Pratap</p>
+                <div class="views flexAli">
+                  <p><span>54K</span>views</p>
+                  <p class="postDate">10 months ago</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
